--- a/src/index.ejs
+++ b/src/index.ejs
@@ -17,6 +17,7 @@
   -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: localhost:*; script-src 'unsafe-inline' 'unsafe-eval' https: localhost:*; connect-src https: localhost:* ws://localhost:*; style-src 'unsafe-inline' https:; object-src 'none';">
   <meta name="importmap-type" content="systemjs-importmap" />
+  <script type="systemjs-importmap" src="https://webimportmap.s3.amazonaws.com/importmap.json"></script>
   <!-- If you wish to turn off import-map-overrides for specific environments (prod), uncomment the line below -->
   <!-- More info at https://github.com/joeldenning/import-map-overrides/blob/master/docs/configuration.md#domain-list -->
   <!-- <meta name="import-map-overrides-domains" content="denylist:prod.example.com" /> -->
@@ -49,9 +50,7 @@
   <script type="systemjs-importmap">
     {
       "imports": {
-        "@web-taxco/root-config": "//localhost:9000/web-taxco-root-config.js",
-        "@web-taxco/spa-shared-state": "http://localhost:8500/web-taxco-spa-shared-state.js",
-        "@web-taxco/shop": "//localhost:4200/main.js"
+       
       }
     }
   </script>
